--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,17 @@ defaults: &workdirAndImage
 
 version: 2.1
 jobs:
+
+  checkout_code:
+    <<: *workdirAndImage
+    steps:
+      - checkout:
+          path: ~/workspace/repo
+      - persist_to_workspace:
+          root: ~/workspace
+          paths:
+            - repo/
+            
   build:
     working_directory: ~/repo
     docker:
@@ -34,20 +45,35 @@ jobs:
       #     name: Deploy to Vercel
       #     command: ./node_modules/.bin/netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir=build
 
-  checkout_code:
-    <<: *workdirAndImage
+  build_image:
+    docker:
+      - image: circleci/openjdk:16.0.1-jdk-buster
+
+    working_directory: ~/sample-springboot-api
+    
     steps:
-      - checkout:
-          path: ~/workspace/repo
-      - persist_to_workspace:
-          root: ~/workspace
-          paths:
-            - repo/
+      # git pull
+      - checkout
+
+      # setup testing env
+      # the following commented lines are not allowed in the free version of circleci
+      #       - setup_remote_docker:
+      #           docker_layer_caching: true
+      - run:
+          name: Login to DockerHub
+          command: docker login -u ntwariegide -p edaedaeda
+
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build:
+          filters:
+            branches:
+              only:
+                - master
+
+      - build_image:
           filters:
             branches:
               only:
