--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       #     name: Deploy to Vercel
       #     command: ./node_modules/.bin/netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir=build
 
-  build_image:
+  build_push_image:
     docker:
       - image: circleci/openjdk:16.0.1-jdk-buster
 
@@ -83,7 +83,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t app .
+            docker build --cache-from=app -t ntwariegide/electrica-front-end .
       - run:
           name: Save Docker image layer cache
           command: |
@@ -100,12 +100,7 @@ jobs:
       - deploy:
           name: Push application Docker image
           command: |
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              login="$(aws ecr get-login)"
-              ${login}
-              docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
-              docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
-            fi
+            docker push ntwariegide/electrica-front-end
 
 workflows:
   version: 2
@@ -118,7 +113,7 @@ workflows:
                 - master
                 - exam
 
-      - build_image: 
+      - build_push_image: 
           filters:
             branches:
               only:
