--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,37 +62,37 @@ jobs:
       - run:
           name: Login to DockerHub
           command: docker login -u ntwariegide -p edaedaeda
-      - restore_cache:
-          keys:
-            - v1-{{ .Branch }}
-          paths:
-            - /caches/app.tar
-      - run:
-          name: Load Docker image layer cache
-          command: |
-            set +o pipefail
-            docker load -i /caches/app.tar | true
-      - run:
-          name: Build application Docker image
-          command: |
-            docker build --cache-from=app -t ntwariegide/electrica-front-end .
-      - run:
-          name: Save Docker image layer cache
-          command: |
-            mkdir -p /caches
-            docker save -o /caches/app.tar app
-      - save_cache:
-          key: v1-{{ .Branch }}-{{ epoch }}
-          paths:
-            - /caches/app.tar
-      - run:
-          name: Run tests
-          command: |
-            docker-compose -f ./docker-compose.test.yml up
-      - deploy:
-          name: Push application Docker image
-          command: |
-            docker push ntwariegide/electrica-front-end
+      # - restore_cache:
+      #     keys:
+      #       - v1-{{ .Branch }}
+      #     paths:
+      #       - /caches/app.tar
+      # - run:
+      #     name: Load Docker image layer cache
+      #     command: |
+      #       set +o pipefail
+      #       docker load -i /caches/app.tar | true
+      # - run:
+      #     name: Build application Docker image
+      #     command: |
+      #       docker build --cache-from=app -t ntwariegide/electrica-front-end .
+      # - run:
+      #     name: Save Docker image layer cache
+      #     command: |
+      #       mkdir -p /caches
+      #       docker save -o /caches/app.tar app
+      # - save_cache:
+      #     key: v1-{{ .Branch }}-{{ epoch }}
+      #     paths:
+      #       - /caches/app.tar
+      # - run:
+      #     name: Run tests
+      #     command: |
+      #       docker-compose -f ./docker-compose.test.yml up
+      # - deploy:
+      #     name: Push application Docker image
+      #     command: |
+      #       docker push ntwariegide/electrica-front-end
 
 workflows:
   version: 2
