--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,14 +62,16 @@ jobs:
       - run:
           name: Login to DockerHub
           command: docker login -u ntwariegide -p edaedaeda
-      - run:
-          name: Build application Docker image
-          command: |
-            docker build --cache-from=app -t ntwariegide/electrica-front-end .
-      - deploy:
-          name: Push application Docker image
-          command: |
-            docker push ntwariegide/electrica-front-end
+      - run: docker build -t ntwariegide/electrica-front-end .
+      - run: docker push ntwariegide/electrica-front-end
+      # - run:
+      #     name: Build application Docker image
+      #     command: |
+      #       docker build --cache-from=app -t ntwariegide/electrica-front-end .
+      # - deploy:
+      #     name: Push application Docker image
+      #     command: |
+      #       docker push ntwariegide/electrica-front-end
 
 workflows:
   version: 2
